# Djinn

./: .gitignore  README.md
src/: djinn.ml  djinn_stubs.c  dune  test.ml
src/tinn/: Tinn.c  Tinn.h  dune
