(library
  (name djinn)
  (foreign_stubs
    (language c)
    (names djinn_stubs)
    (flags -I./))
  (c_library_flags (-L./src/tinn -ltinn))
  (modules djinn))

(executable
  (name test)
  (libraries djinn)
  (modules test))



(rule
  (target libtinn.a)
  (deps tinn/libtinn.a)
  (action (copy tinn/libtinn.a %{target})))